--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     </div>
   </div>
   <hr>
-  <p class="text-center">@ Rangrezza Restaurant & Banquet Hall 2025 All rights reserved. Designed & Developed by CodesGesture</p>
+  <p class="text-center">@ Rangrezza Restaurant & Banquet Hall 2025 All rights reserved.<br> Designed & Developed by CodesGesture</p>
 </footer>
 
 <!-- Bootstrap JS -->
